--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
-<html>
- 
-<body>
-  <h1>linh</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
- 
+<!DOCTYPE html>
+<html lang="en">
+     <head>
+          <title>Dasmoto's Arts & Crafts</title>
+          <meta charset="utf-8">
+          <meta>
+          <link href="resources/css/style.css" rel="stylesheet">
+     </head>
+     <body>
+          <main>
+               <header>
+                    <h1>Dasmoto's Arts & Crafts</h1>
+               </header>
+               <section>
+                    <article>
+                         <h2 class="brushes">Brushes</h2>
+                         <img src="resources/images/hacksaw.jpeg">
+                         <h3>Hacksaw Brushes</h3>
+                         <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span>Starting at $3.00 / brush.</span></p>
+                    </article>
+               </section>
+          </main>
+     </body>
 </html>
